# scalable-fyp

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
airflow_dags/: airflow.cfg  airflow.db  standalone_admin_password.txt
airflow_dags/dags/: fyp_inference.py  fyp_monitor.py  fyp_training.py
docker/mlflow/: Dockerfile
fyp/: settings.py
fyp/data/db/: orm.py  queries.py  tables.py
fyp/data/pipeline/: __main__.py  utils.py
fyp/ml/: monitor.py
fyp/ml/inference/: __main__.py
fyp/ml/models/: utils.py
fyp/ml/train/: __main__.py
terraform/aws/: airflow.tf  conf.tf  db.tf  ecs.tf  iam.tf  job.tf  mlflow.tf  ssm.tf  vpc.tf
terraform/azure/: conf.tf  db.tf  mlflow.tf
