[tool.poetry]
name = "scalable-fyp"
version = "0.1.0"
description = ""
authors = ["Edward Turner <edward.turnerr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dask = {extras = ["complete"], version = "^2024.10.0"}
scikit-learn = "^1.5.2"
sqlalchemy = "<2.0"
jsonlogformatter = "^1.0.5"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
xgboost = "^2.1.1"
pandas = "^2.2.3"
mlflow = "^2.17.1"
hyperopt = "^0.2.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
apache-airflow = "^2.10.2"
polyfactory = "^2.17.0"
jupyterlab = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
